2009-09-30  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/Makefile.redirect.ex: Remove extra variables
	and shape up.

	* bin/lib/cygbuild.pl (Help): Work around Perl bug in
	pod2text. Change option presentation to notation
	'-o, --option'.

	* bin/lib/libcheck.sh: (top level): change all
	tail/head command to use --lines=N option.
	(CygbuildCmdInstallCheckBinFiles): Correct *Waen() call to
	(CygbuildPythonLibraryDependsCache): Generate cache.
	(CygbuildRubyLibraryDependsMain): Generate cache.

	*Warn().
	(CygbuildCmdInstallCheckSetupHintDependExists): search
	for exact library match. On failure, show close library
	matches.
	(CygbuildPerlLibraryDependsMain): Generate Perl cache.

	* bin/cygbuild.sh:  (top level): change all
	tail/head command to use --lines=N option.
	(CygbuildChmodExec): Return correct status.
	(CygbuildPostinstallWriteStanza): remove
	CygbuildChmodExec(). Add more quoting.
	(CygbuildInstallCygwinPartPostinstall): Install
	with modes 755, not 644.
	(CygbuildBootVariablesGlobalCachePerl): Correct typo.
	(CygbuildBootVariablesGlobalCachePython): Correct typo.
	(CygbuildHelpShort): Adjust layout.
	(CygbuildHelpLong): Move exit command to correct place.
	(CygbuildBootVariablesGlobalCachePerlGenerate): New.
	(CygbuildCygcheckLibraryDepListFull): Fix indentation.
	(CygbuildBootVariablesGlobalCachePythonGenerate): New.
	(CygbuildBootVariablesGlobalCacheGenerate): New.
	(CygbuildDefineGlobalRubyVersion): New.
	(CygbuildBootVariablesGlobalCacheRubyGenerate): New.
	(CygbuildBootVariablesGlobalCacheRuby): New.
	(CygbuildDefineGlobalPythonVersion): Return status
	(CygbuildDefineGlobalPerlVersion): Return status.
	(CygbuildCmdFilesWrite): Use *.ex, not *.tmp extension.
	(CygbuildInstallPackageDocs): Improve debug.
	(CygbuildCmdMkpatchMain): Verify destination patch
	directory.
	(CYGBUILD_INSTALL_IGNORE): Add *.ex.
	(CYGBUILD_IGNORE_FILE_TYPE): Add .ex.
	(CygbuildBootVariablesGlobalMain): Add *.ex to variable
	'cygbuild_opt_exclude_tmp_files'.